--- a/xiaomusic/static/index.html
+++ b/xiaomusic/static/index.html
@@ -46,7 +46,8 @@
     <div>
       <input id="music-name" type="text" placeholder="请输入搜索关键词(如:MV高清版 周杰伦 七里香)"></input>
       <input id="music-filename" type="text" placeholder="请输入保存为的文件名称(如:周杰伦-七里香)"></input>
-      <button id="play">播放</button>
+      <button id="play">播放本地资源</button>
+      <button id="play_inet">播放互联网资源</button>
     </div>
 </body>
 </html>
